# drivebot

./: README.md
drivebot_control/: CMakeLists.txt  Drivebot.perspective  drivebot.rviz  package.xml
drivebot_control/config/: params.yaml
drivebot_control/launch/: drivebot_control.launch
drivebot_description/: CMakeLists.txt  package.xml  rviz.rviz
drivebot_description/launch/: rviz.launch
drivebot_description/urdf/: drivebot_model.xacro  macros.xacro  materials.xacro
drivebot_gazebo/: CMakeLists.txt  package.xml
drivebot_gazebo/config/: params.yaml
drivebot_gazebo/launch/: drivebot_sim.launch
drivebot_gazebo/scripts/: groundtruth_remapper.py
drivebot_localization/: CMakeLists.txt  package.xml
drivebot_localization/launch/: localization.launch  odom_localization.launch
